# vpn-router

./: .gitignore  LICENSE  README.md  cabal.project.local  changelog.md  client_session_key.aes  default.nix  flake.nix  gen-cabal.sh  shell.nix  trace-embrace.yaml  vpn-router.cabal  vpn-router.cabal.template
.github/workflows/: test.yml
app/: VpnRouter.hs
nix/: default.nix  local.sources.json  sources.json
nix/haskell/: overlay.nix  static-ghc.nix
nixos/: flake-vpn-router.nix  non-flake-vpn-router.nix  vpn-router.nix
src/VpnRouter/: App.hs  Bash.hs  CmdArgs.hs  CmdRun.hs  Net.hs  Page.hs  Prelude.hs  trace-embrace.yaml
src/VpnRouter/Net/: IpTool.hs  Iptables.hs  Types.hs
test/: Discovery.hs  Driver.hs
test/VpnRouter/Test/: Net.hs
