cabal-version: 3.0
name:          vpn-router
version:       0.0.1

synopsis:      Switch VPN with web interface for LAN
description:
    vpn-router is a service with the web interface allowing users of a local
    network to control VPN bypass from their devices.
    
    == Motivation
    #motivation#
    
    It is convinient if the whole WiFi network is connected through VPN, but
    user might not access some resources sometimes. Having two networks
    deployed might be an option, though destop stations usually connect
    through the Ethernet cable, and such approch doubles the number of WiFi
    routers. Hopping between WiFi networks might not be as ergonomic as it
    should be due to bugs in the connectivity check in Android and Windows.
    
    == Building
    #building#
    
    The easiest way to build the project is to use nix.
    
    > $ nix-build
    > $ sudo ./result/bin/vpn-router run
    
    VpnRouter.CmdRun::runCmd: start; rs: RunService {ispNic = Tagged
    “wlp2s0”, gatewayHost = Tagged 192.168.1.1, routingTableId =
    RoutingTableId 7, packetMark = PacketMark 2, httpPortToListen = Tagged
    3000} VpnRouter.Net::clearMarkingLines: ; pm: PacketMark 2 =>
    [(1,PacketMark 2,“192.168.11.65”),(2,PacketMark
    2,“192.168.11.65”),(3,PacketMark 2,“192.168.11.14”)]
    VpnRouter.Net::bash: ; cmd: “iptables”; args:
    [“-t”,“mangle”,“-D”,“PREROUTING”,“3”] VpnRouter.Net::bash: ; cmd:
    “iptables”; args: [“-t”,“mangle”,“-D”,“PREROUTING”,“2”]
    VpnRouter.Net::bash: ; cmd: “iptables”; args:
    [“-t”,“mangle”,“-D”,“PREROUTING”,“1”] VpnRouter.Net::clearDefaultRoute:
    ; rt: RoutingTableId 7 => [(Tagged 192.168.1.1,Tagged “wlp2s0”)]
    VpnRouter.Net::bash: ; cmd: “ip”; args:
    [“rule”,“add”,“fwmark”,“2”,“table”,“7”] VpnRouter.Net::bash: ; cmd:
    “ip”; args:
    [“route”,“add”,“default”,“via”,“192.168.1.1”,“dev”,“wlp2s0”,“table”,“7”]
    02\/Feb\/2026:18:05:53 +0300 [Info#yesod-core] Application launched
    \@(yesod-core-1.6.27.0-AARvdAkh4ksHgP71iuENec:Yesod.Core.Dispatch
    src\/Yesod\/Core\/Dispatch.hs:197:10) 02\/Feb\/2026:18:06:14 +0300
    [Info] Client 192.168.11.65 visited home page
    \@(vpn-router-0.0.1-inplace:VpnRouter.Page src\/VpnRouter\/Page.hs:35:4)
    VpnRouter.Net::isVpnOff: ; pmca: (PacketMark 2,“192.168.11.65”) => []
    192.168.11.65 - - [02\/Feb\/2026:18:06:14 +0300] “GET \/ HTTP\/1.1” 200
    - “http:\/\/my-router:3000\/” “Mozilla\/5.0 (Linux; Android 10; K)
    AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/144.0.0.0 Mobile
    Safari\/537.36” 02\/Feb\/2026:18:06:17 +0300 [Info] Client 192.168.11.65
    asked to disable VPN \@(vpn-router-0.0.1-inplace:VpnRouter.Page
    src\/VpnRouter\/Page.hs:102:4) VpnRouter.Net::bash: ; cmd: “iptables”;
    args:
    [“-t”,“mangle”,“-I”,“PREROUTING”,“-s”,“192.168.11.65”,“-j”,“MARK”,“–set-mark”,“2”]
    192.168.11.65 - - [02\/Feb\/2026:18:06:17 +0300] “POST \/off HTTP\/1.1”
    303 0 “http:\/\/my-router:3000\/” “Mozilla\/5.0 (Linux; Android 10; K)
    AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/144.0.0.0 Mobile
    Safari\/537.36”
    
    Once the service is running open link http:\/\/my-router:3000\/. There
    is a simple UI available with a toggle button to control the VPN bypass.
    
    <</img/on.png on>> | <</img/off.png off>> |
    
    The service can be stopped, because it only adjusts routing options in
    the Linux kernel, but at every start all settings related to the routing
    table and the packet mark specified in configuration will be cleared.
    
    == Configuration
    #configuration#
    
    The service should be launched under the root user to have access to
    iptables or use <https://unix.stackexchange.com/a/768693 capabilities>.
    All service options are set through command line arguments:
    
    Usage: vpn-router run [-d|–dev ARG] [-g|–gateway ARG] [-t|–routing-table
    ARG] [-m|–packet-mark ARG] [-p|–port PORT]
    
    launch the service exposed over HTTP
    
    Available options: -d,–dev ARG network device name connected to the
    Internet (default: Tagged “wlp2s0”) -g,–gateway ARG network device name
    connected to the Internet (default: Tagged 192.168.1.1)
    -t,–routing-table ARG routing table id (default: 7) -m,–packet-mark ARG
    packet mark (default: 2) -p,–port PORT HTTP port to listen (default:
    3000) -h,–help Show this help text
    
    Default values for gateway and device are dynamically detected.
    
    == Development environment
    #development-environment#
    
    HLS should be available inside dev env.
    
    > $ nix-shell
    > $ emacs src/VpnRouter/Net.hs &
    > $ cabal build
    > $ cabal test
    
    == Static linking
    #static-linking#
    
    Static is not enabled by default, because GitHub CI job times out.
    
    > nix-build --arg staticBuild true
homepage:      http://github.com/yaitskov/vpn-router
license:       BSD-3-Clause
license-file:  LICENSE
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2026
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/vpn-router/issues
extra-doc-files:
  changelog.md
tested-with:
  GHC == 9.12.2

source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/vpn-router.git

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
      base >=4.7 && < 5
    , optparse-applicative < 1
    , relude >= 1.2.2 && < 2
    , tagged < 1
    , unliftio < 1
    , yesod < 1.8

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    VpnRouter.App
    VpnRouter.Bash
    VpnRouter.CmdArgs
    VpnRouter.CmdRun
    VpnRouter.Net
    VpnRouter.Net.Iptables
    VpnRouter.Net.IpTool
    VpnRouter.Net.Types
    VpnRouter.Page
    VpnRouter.Prelude
  other-modules:
    Paths_vpn_router
  autogen-modules:
    Paths_vpn_router
  build-depends:
    , conduit                 < 2
    , conduit-extra           < 2
    , regex-tdfa              < 2
    , template-haskell        < 3
    , wai                     < 4
    , network                 < 4
    , blaze-markup            < 1
    , trace-embrace           < 2
    , typelits-printf         < 1

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    VpnRouter.Test.Net
    Discovery
  hs-source-dirs:
    test
  ghc-options: -Wall -rtsopts -threaded -main-is Driver
  build-depends:
    , vpn-router
    , QuickCheck
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck

executable vpn-router
  import: base
  ghc-options: -Wall -threaded -with-rtsopts=-N
  main-is: VpnRouter.hs
  hs-source-dirs: app
  build-depends:
    , vpn-router
