cabal-version: 3.0
name:          vpn-router
version:       0.0.5

synopsis:      Switch VPN with web interface for LAN
description:
    vpn-router is a service with the web interface allowing users of a local
    network to control VPN bypass from their devices. The service is tested
    with AmneziaVPN 4.8.10.
    
    == Motivation
    #motivation#
    
    It is convinient if the whole WiFi network is connected through VPN, but
    user might not access some resources sometimes. Having two networks
    deployed might be an option, though destop stations usually connect
    through the Ethernet cable, and such approch doubles the number of WiFi
    routers. Hopping between WiFi networks might not be as ergonomic as it
    should be due to bugs in the connectivity check in Android and Windows.
    
    == Installation
    #installation#
    
    There are several shortcuts the app installation.
    
    === Static ELF
    #static-elf#
    
    Download the statically link version of
    <https://github.com/yaitskov/vpn-router/releases/download/v0.0.5/vpn-router vpn-router>
    from Github, and grant network
    <https://unix.stackexchange.com/a/768693 capabilities> to the file
    (@cap_net_admin+pe@) or launch it via sudo.
    
    The standalone binary can launched without configuration under sudo or
    by a regular user after setting proper to access @ip@ and @iptables@.
    The version for NixOS is shipped with these tools, but static elf
    assumes that the host has these networking apps pre-installed.
    
    > Usage: vpn-router run [-d|--dev ARG] [-g|--gateway ARG] [-t|--routing-table ARG]
    >                       [-m|--packet-mark ARG] [-p|--port PORT]
    >
    >    launch the service exposed over HTTP
    >
    > Available options:
    >   -d,--dev ARG             network device name connected to the Internet
    >                            (default: "wlp2s0")
    >   -g,--gateway ARG         network device name connected to the Internet
    >                            (default: 192.168.1.1)
    >   -t,--routing-table ARG   routing table id (default: 7)
    >   -m,--packet-mark ARG     packet mark (default: 2)
    >   -p,--port PORT           HTTP port to listen (default: 3000)
    >   -h,--help                Show this help text
    
    === NixOS with flakes
    #nixos-with-flakes#
    
    Modify @\/etc\/nixos\/flake.nix@ as follows:
    
    >   # ...
    >   inputs = {
    >     nixpkgs.url = "github:NixOS/nixpkgs/nixos-25.11";
    >     vpn-router.url = "github:yaitskov/vpn-router";
    >   };
    
    >   # ...
    >         modules = [
    >           vpn-router.nixosModules.${system}.default
    >           ({ ... }: {
    >             programs.vpn-router {
    >               enable = true;
    >               # the service will try to detect gateway and dev automatically if not specified
    >               # gateway = "192.168.1.1";
    >               # dev = "wlp2s0";
    >               # port = 3000;
    >           })
    >           ./configuration.nix
    >         ];
    
    === NixOs without flakes
    #nixos-without-flakes#
    
    >   imports =
    >     [ # ... ./hardware-configuration.nix
    >       ./vpn-router.nix
    >     ];
    
    >   programs = {
    >     vpn-router = {
    >       # the service will try to detect gateway and dev automatically if not specified
    >       # gateway = "192.168.1.1";
    >       # dev = "wlp2s0";
    >       # port = 3000;
    >       enable = true;
    >     };
    >   };
    
    Update configurations and check the new service:
    
    > nixos-rebuild switch
    > systemctl status "vpn-router.service"
    
    == Interface
    #interface#
    
    Once the service is running open link http:\/\/my-router:3000\/ on
    device other than the router. There is a simple UI available with a
    toggle button to control the VPN bypass.
    
    +----------------------------------+-----------------------------------+
    | on                               | off                               |
    +==================================+===================================+
    |                                  |                                   |
    +----------------------------------+-----------------------------------+
    
    == Development environment
    #development-environment#
    
    HLS should be available inside the dev environment.
    
    > $ nix develop
    > $ emacs src/VpnRouter/Net.hs &
    > $ cabal build
    > $ cabal test
    
    > $ nix build .#dynamic
    > $ sudo ./result/bin/vpn-router run
    
    == Static linking
    #static-linking#
    
    > nix build .#static
    > # faster build on beefy machine
    > nix build .#static --cores 20 -j 20
homepage:      http://github.com/yaitskov/vpn-router
license:       BSD-3-Clause
license-file:  LICENSE
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2026
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/vpn-router/issues
extra-doc-files:
  changelog.md
tested-with:
  GHC == 9.12.2

source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/vpn-router.git

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
      base >=4.7 && < 5
    , optparse-applicative < 1
    , relude >= 1.2.2 && < 2
    , tagged < 1
    , unliftio < 1
    , yesod-core < 1.8

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    VpnRouter.App
    VpnRouter.Bash
    VpnRouter.CmdArgs
    VpnRouter.CmdRun
    VpnRouter.Net
    VpnRouter.Net.Iptables
    VpnRouter.Net.IpTool
    VpnRouter.Net.Types
    VpnRouter.Page
    VpnRouter.Prelude
  other-modules:
    Paths_vpn_router
  autogen-modules:
    Paths_vpn_router
  build-depends:
    , file-embed              < 1
    , binary                  < 1
    , blaze-markup            < 1
    , conduit                 < 2
    , conduit-extra           < 2
    , network                 < 4
    , regex-tdfa              < 2
    , template-haskell        < 3
    , trace-embrace           < 2
    , typelits-printf         < 1
    , unix                    < 3
    , wai                     < 4

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    VpnRouter.Test.Net
    Discovery
  hs-source-dirs:
    test
  ghc-options: -Wall -rtsopts -threaded -main-is Driver
  build-depends:
    , vpn-router
    , QuickCheck
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck

executable vpn-router
  import: base
  ghc-options: -Wall -threaded -with-rtsopts=-N
  main-is: VpnRouter.hs
  hs-source-dirs: app
  build-depends:
    , vpn-router
